--- a/MonthlyStatement/Areas/Personal/Views/Report/PersonalDetail.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/Report/PersonalDetail.cshtml
@@ -2,9 +2,9 @@
 @using MonthlyStatement.Models
 @{
     ViewBag.Title = "PersonalDetail";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     int i = 0;
     int j = 64;
-    int k = 0;
     string lstId = "";
 
     CP25Team04Entities models = new CP25Team04Entities();
