--- a/MonthlyStatement/Areas/Admin/Views/ListReportStaff/Detail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportStaff/Detail.cshtml
@@ -156,7 +156,7 @@
                                         </div>
                                         <hr />
                                         <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
-                                        @using (Html.BeginForm("PostCommentstaff", "Comments", FormMethod.Post))
+                                        @using (Html.BeginForm("PostCommentStaff", "Comments", FormMethod.Post))
                                         {
                                             <input type="hidden" name="id" value="@idstaffreport" />
                                             <div class="form-group">
