--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormDepartmentDetail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormDepartmentDetail.cshtml
@@ -8,62 +8,60 @@
     int j = 64;
     string lstId = "";
 
-    CP25Team04Entities models = new CP25Team04Entities();
-    string emails = User.Identity.Name;
-    string accID = models.AspNetUsers.FirstOrDefault(a => a.Email.ToLower().Equals(emails.ToLower().Trim())).Id;
+
 }
+
 @if (ViewBag.FormDep == true)
 {
     <div class="alert alert-danger" role="alert">
-        Bạn chưa chỉnh sửa biểu mẫu báo cáo
+        Bạn chưa tạo mẫu báo cáo
     </div>
 }
 else
 {
+    int idperiod = Model.First().FormDepartmentReport.report_period_id;
+    CP25Team04Entities models = new CP25Team04Entities();
+    var form = models.DepartmentReports.Where(p => p.report_period_id == idperiod);
+    string emails = User.Identity.Name;
+    string accID = models.AspNetUsers.FirstOrDefault(a => a.Email.ToLower().Equals(emails.ToLower().Trim())).Id;
+    var formPer = models.DepartmentReports.Where(p => p.report_period_id == idperiod && p.account_id.Equals(accID));
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                @foreach (var item in Model.Where(c => c.Category.category_lv == 1).ToList())
+                @foreach (var items in models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_lv == 1).ToList())
                 {
                     i = 0;
                     j++;
                     <br />
                     <div class="section-title mt-1" style="font-weight:bold">
-                        @(((char) j).ToString()). @item.Category.category_content.ToUpper()
-
+                        @(((char) j).ToString()). @items.Category.category_content.ToUpper()
                     </div>
-
-                    foreach (var items_lv2 in Model.Where(c => c.Category.category_lv == 2).ToList())
+                    foreach (var items_lv2 in models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_of_id == items.category_id).ToList())
                     {
                         lstId += items_lv2.category_id + "-";
                         i++;
-
                         <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
                             <div class="col-lg-12">
-
                                 <table class="table table-bordered dataTable">
                                     <tbody>
                                         <tr class="" style="max-width: 50px">
                                             <th>@(i). @items_lv2.Category.category_content</th>
                                         </tr>
-
                                         <tr>
                                             <td>
                                                 <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin" disabled>
                                             </td>
                                         </tr>
-                                        <tr hidden id="append-@item.category_id"></tr>
+                                        <tr hidden id="append-@items.category_id"></tr>
                                     </tbody>
                                 </table>
-
                             </div>
-
                         </div>
-                        if (Model.Any(c => c.Category.category_lv == 3))
+                        if (models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
                         {
                             <div>
                                 <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
-                                    @foreach (var items_lv3 in Model.Where(c => c.Category.category_lv == 3).ToList())
+                                    @foreach (var items_lv3 in models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id).ToList())
                                     {
                                         <div class="col">
                                             <table class="table table-bordered dataTable">
@@ -76,7 +74,7 @@ else
                                                             <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin" disabled>
                                                         </td>
                                                     </tr>
-                                                    <tr hidden id="append-@item.category_id"></tr>
+                                                    <tr hidden id="append-@items.category_id"></tr>
                                                 </tbody>
                                             </table>
                                         </div>
@@ -99,5 +97,5 @@ else
             </div>
         </div>
     </div>
-}
 
+}
