--- a/MonthlyStatement/Areas/Staff/Views/FormStaffReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Staff/Views/FormStaffReport/Index.cshtml
@@ -5,7 +5,22 @@
     int i = 0;
     int j = 64;
     int k = 0;
+}
 
+@if (ViewBag.CheckFormSta == true)
+{
+    <div class="alert alert-danger" role="alert">
+        Chưa có biểu mẫu báo cáo của tháng này
+    </div>
+}
+else if (ViewBag.Check == true)
+{
+    <div class="alert alert-danger" role="alert">
+        Bạn đã báo cáo tháng này!
+    </div>
+}
+else
+{
     string lstId = "";
 
     CP25Team04Entities models = new CP25Team04Entities();
@@ -15,16 +30,6 @@
     string emails = User.Identity.Name;
     string accID = models.AspNetUsers.FirstOrDefault(a => a.Email.ToLower().Equals(emails.ToLower().Trim())).Id;
     var formPer = models.StaffReports.Where(p => p.report_period_id == idKy && p.account_id.Equals(accID)).ToList();
-}
-
-@if (ViewBag.Check == true)
-{
-    <div class="alert alert-danger" role="alert">
-        Bạn đã báo cáo tháng này!
-    </div>
-}
-else
-{
     <section class="section">
         <input hidden value="@Model.report_period_id" id="report_period_id" />
         <div class="section-body">
