--- a/MonthlyStatement/Areas/Staff/Views/Static/Index.cshtml
+++ b/MonthlyStatement/Areas/Staff/Views/Static/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<MonthlyStatement.Models.ReportPeriod>
+﻿
+@model IEnumerable<MonthlyStatement.Models.ReportPeriod>
 
 @{ ViewBag.Title = "Index";
                 Layout = "~/Views/Shared/_Layout.cshtml"; }
@@ -143,4 +144,3 @@
         height: 30px;
     }
 </style>
-
