--- a/MonthlyStatement/Areas/Secretary/Views/Faculty/Index.cshtml
+++ b/MonthlyStatement/Areas/Secretary/Views/Faculty/Index.cshtml
@@ -1,1 +1,153 @@
+﻿@model IEnumerable<MonthlyStatement.Models.Faculty>
 
+@{ int i = 0; }
+
+@{ Layout = "~/Views/Shared/_Layout.cshtml"; }
+
+<section class="section">
+    <div class="section-body">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header bg-primary" style="height:100px">
+                        <h3 class="text-white" style="font-size:1.75rem">Quản lý khoa</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="form-group">
+                            <div class="col-sm-12 buttons">
+                                <a style="color:white" type="button" class="btn btn-primary btn-round" href="@Url.Action("Create", "Faculty")">
+                                    <i class="fa fa-plus"></i>
+                                    Tạo khoa mới
+                                </a>
+                            </div>
+                        </div>
+                        <div class="table-responsive">
+                            <table class="table table-striped" id="table-1">
+                                <thead>
+                                    <tr role="row">
+                                        <th class="text-center">
+                                            STT
+                                        </th>
+
+                                        <th>
+                                            Tên khoa
+                                        </th>
+                                        <th>
+                                            Số lượng
+                                        </th>
+                                        <th class="text-center">
+                                            Thao tác
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
+
+                                    {
+                                        i = i + 1;
+
+                        <tr>
+                            <td class="text-center">
+                                @i
+                            </td>
+                            <td>
+                                <a href="@Url.Action("AttendenceList","Faculty", new { id = item.faculty_id })">@item.faculty_name</a>
+                            </td>
+                            <td>
+                                @item.Profiles.Count()
+                            </td>
+                            <td class="text-center">
+                                <div class="buttons">
+                                    <a class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "Faculty", new { id = item.faculty_id })">
+                                        <i class="far fa-edit"></i>
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">Thêm danh sách người dùng</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div class="modal-body">
+                <div class="form-group">
+                    <label>File</label>
+                    <input type="file" id="fileimport" class="form-control">
+                </div>
+                <p id="importfilevalidation" hidden="hidden" class="text-danger"></p>
+            </div>
+            <div class="modal-footer bg-whitesmoke br">
+                <button type="button" class="btn btn-primary" id="importUser">Save</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script>$("#edit_faculty").click(function () {
+        swal({
+            title: 'Chỉnh sửa tên khoa',
+            buttons: true,
+            dangerMode: true,
+            content: {
+                element: 'input',
+                attributes: {
+                    placeholder: 'Nhập tên khoa',
+                    type: 'text',
+                },
+            },
+        })
+            .then((willSave) => {
+                if (willSave) {
+                    swal('Lưu thành công!', {
+                        icon: 'success',
+                    });
+                }
+            });
+    });
+    $('#importUser').on('click', function () {
+
+        $('#importfilevalidation').hide();
+        let fileimport = $('#fileimport').val();
+        let fileType = fileimport.substr(fileimport.lastIndexOf('.') + 1).toLowerCase();
+        var check = true;
+
+        if (fileimport.trim().length < 1) {
+            check = false;
+            $('#importfilevalidation').text("Bạn chưa chọn file, Hãy chọn file danh sách cần nhập.").show().prop("hidden", false);
+        } else if (fileType != "xlsx" && fileType != "xls") {
+            check = false;
+            $('#importfilevalidation').text("File không đúng định dạng, Vui lòng chọn file có định dạng .xls/.xlsx.").show().prop("hidden", false);
+        }
+        if (check == true) {
+            var formData = new FormData();
+            formData.append('lstUser', $("#fileimport")[0].files[0]);
+
+            $.ajax({
+                url: $('#requestUrl').val() + 'Admin/Faculty/ImportUser',
+                type: 'POST',
+                dataType: 'html',
+                contentType: false,
+                processData: false,
+                data: formData
+            }).done(function (ketqua) {
+                swal('Thành công', 'Cập nhật thông tin thành công', 'success');
+                $('#fileimport').val(null);
+            });
+        }
+    });</script>
