--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -14,7 +14,7 @@
         Chưa có biểu mẫu báo cáo của tháng này
     </div>
 }
-else if (ViewBag.Check == true)
+else if (ViewBag.CheckReportPer == true)
 {
     <div class="alert alert-danger" role="alert">
         Bạn đã báo cáo tháng này!
