--- a/MonthlyStatement/Areas/Staff/Views/FormStaffReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Staff/Views/FormStaffReport/Index.cshtml
@@ -13,7 +13,7 @@
         Chưa có biểu mẫu báo cáo của tháng này
     </div>
 }
-else if (ViewBag.Check == true)
+else if (ViewBag.CheckReportSta == true)
 {
     <div class="alert alert-danger" role="alert">
         Bạn đã báo cáo tháng này!
